--- a/war/war.css
+++ b/war/war.css
@@ -22,6 +22,25 @@
     text-align: right;
     padding: 350px 50px 10px 10px;
 }
+.button {
+    border-radius: 5px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+.play {
+    background-color: #4CADB0;
+    border: 1px #4CADB0 solid;
+}
+.reset {
+    background-color: #B04F4C;
+    border: 1px #B04F4C solid;
+}
 .table {
     padding: 0;
 }
@@ -49,7 +68,7 @@
 }
 .card {
     height: 120px;
-    width: 120px;
+    width: 140px;
     margin-top: 15px;
     padding-top: 90px;
     font-size: 24px;
@@ -59,13 +78,12 @@
     border-radius: 5px;
 }
 .deck {
-    height: 100px;
-    width: 240px;
+    width: 220px;
     font-weight: bold;
-    font-size: 70px;
+    font-size: 40px;
     color: #4EA9AC;
-    margin-bottom: 70px;
-    vertical-align: bottom;
+    margin-top: 100px;
+    vertical-align: top;
 }
 .display {
     width: 502px;
